# RtmpDemo

./: settings.gradle  项目过程问题
app/: build.gradle
app/src/androidTest/java/com/test/rtmpdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  util.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/test/rtmpdemo/: MainActivity.java  NativePush.java  RTPMApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/test/rtmpdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
